\name{diffHicnews}
\title{diffHic News}
\encoding{UTF-8}

\section{Version 1.9.8}{\itemize{
\item Added extractPatch() function to count bin pairs in a specified area of the interaction space.

\item Modified connectCounts() to eliminate warnings upon stranded entries, unknown chromosomes.
All entries of input regions are now retained, though not necessarily in the input order.
Also switched original metadata to NA when second.regions is an integer.

\item Modified preparePairs() to be more generous when considering inward-facing reads if they overlap past each other.

\item Fixed bug in savePairs() involving failure to swap other information when enforcing index ordering.

\item Added mergeCMs() function to allow entry into the pipeline from ContactMatrix objects.

\item Moved pre-processing scripts out of the package to the repository for the user's guide.

\item Updated user's guide.
}}

\section{Version 1.8.0}{\itemize{
\item Streamlined filterDirect(), filterTrended(), and added tests for them.
Also allowed specification of which assay to use for the data and reference objects.

\item enrichedPairs() and neighborCounts() now return counts for neighbourhood regions, not just the enrichment values.

\item filterPeaks() will compute (and optionally return) enrichment values from neighbourhood counts. 

\item normalizeCNV() and correctedContact() allow specification of which assay matrix to use from the SE objects.

\item Refactored a great deal of the C++ code for improved clarity.

\item Overhauled handling of DNase Hi-C data, so that pseudo-fragments are no longer necessary.
Most functions now automatically recognise DNase-C data from an empty GRanges in param$fragments. 
Deprecated segmentGenome() and prepPseudoPairs(), added the emptyGenome() function.

\item Updated user's guide.
}
}

\section{Version 1.6.0}{\itemize{
\item Relaxed checks in preparePairs(), prepPseudoPairs() when more chromosomes are supplied than needed.
