@@ -1,6 +1,6 @@
 Package: diffHic
-Version: 1.9.8
-Date: 2017-10-12
+Version: 1.9.9
+Date: 2017-10-18
 Title: Differential Analyis of Hi-C Data
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
